fix java 11